<?xml version="1.0" encoding="UTF-8"?>
<!--

    Sliceworkz Eventstore - a Java/Postgres DCB Eventstore implementation
    Copyright © 2025-2026 Sliceworkz / XTi (info@sliceworkz.org)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sliceworkz</groupId>
	<artifactId>sliceworkz-eventstore</artifactId>
	<version>0.11.0-SNAPSHOT</version>
	
	<name>${project.artifactId}</name>
	<description>DCB (Dynamic Consistency Boundary) compliant EventStore (Java/Postgres)</description>
	<url>https://sliceworkz.github.io/eventstore</url>
	
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<maven.minimal-version>3.6.3</maven.minimal-version>
		
		<maven.maven-pgp-plugin.version>3.2.8</maven.maven-pgp-plugin.version>
		<maven.maven-versions-plugin.version>2.21.0</maven.maven-versions-plugin.version>
		<maven.maven-enforcer-plugin.version>3.6.3</maven.maven-enforcer-plugin.version>
		<maven.mycila-license-plugin.version>5.1.1</maven.mycila-license-plugin.version>
		<maven.maven-central-publishing-plugin.version>0.11.0</maven.maven-central-publishing-plugin.version>
		<maven.flatten-plugin.version>1.8.0</maven.flatten-plugin.version>

		<maven.compiler.release>21</maven.compiler.release>

		<!-- Publish only client-facing modules; opt-in per module below -->
		<maven.deploy.skip>true</maven.deploy.skip>
	</properties>
	
	<modules>
		<!-- maven build constructs -->
		<module>sliceworkz-eventstore-parent-pom</module>
		<module>sliceworkz-eventstore-bom</module>
		
		<!-- project modules -->
		<module>sliceworkz-eventstore-api</module>
		<module>sliceworkz-eventstore-impl</module>

		<!-- serialization -->
		<module>sliceworkz-eventstore-serialization-json</module>

		<!-- examples -->
		<module>sliceworkz-eventstore-examples</module>

		<!-- infra implementations -->
		<module>sliceworkz-eventstore-infra-inmem</module>
		<module>sliceworkz-eventstore-infra-inmem-fs</module>
		<module>sliceworkz-eventstore-infra-file</module>
		<module>sliceworkz-eventstore-infra-postgres</module>

		<!-- testing support: backend harness, shared TCK scenarios and the application fixture -->
		<module>sliceworkz-eventstore-testing</module>

		<!-- runs the TCK scenarios against every in-tree backend, plus repo-internal tests -->
		<module>sliceworkz-eventstore-tests</module>

		<!-- benchmark tool -->
		<module>sliceworkz-eventstore-benchmark</module>
	</modules>
	
	<build>
		<plugins>
			<plugin>
			    <groupId>org.codehaus.mojo</groupId>
			    <artifactId>versions-maven-plugin</artifactId>
			    <version>${maven.maven-versions-plugin.version}</version>
			    
			    <!-- make sure we get the right suggestions from 
			    		mvn versions:display-dependency-updates
			    	 and
			    		mvn versions:display-plugin-updates
			     -->
			    <configuration>
					<ruleSet>
			            <ignoreVersions>
							<!-- Don't depend on snapshots' -->
							<ignoreVersion>
								<type>regex</type>
								<version>(.+-SNAPSHOT|.+-M\d)</version>
							</ignoreVersion>
							<!-- Don't depend on alpha or beta versions' -->
							<ignoreVersion>
								<type>regex</type>
								<version>.+-(alpha|beta).+</version>
							</ignoreVersion>
							<!-- Don't depend on release candidates -->
							<ignoreVersion>
								<type>regex</type>
								<version>(?i).+-rc[-.]?\d+</version>
							</ignoreVersion>
			            </ignoreVersions>
			    	</ruleSet>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.minimal-version}</version>
								</requireMavenVersion>
							</rules>    
						</configuration>
					</execution>
				</executions>
			</plugin>
					        					
			<plugin>
			    <groupId>org.sonatype.central</groupId>
			    <artifactId>central-publishing-maven-plugin</artifactId>
			    <version>${maven.maven-central-publishing-plugin.version}</version>
			    <extensions>true</extensions>
			    <configuration>
					<publishingServerId>central</publishingServerId>
					<deploymentName>eventstore-${project.version}</deploymentName>
					<!--
						central-publishing bundles the whole reactor and does NOT honour
						maven.deploy.skip, so the build constructs (aggregator, parent-pom)
						and non-client modules (examples, tests, benchmark) must be excluded
						explicitly here to publish only the client-facing set to Central.

						sliceworkz-eventstore-testing is intentionally NOT excluded: it carries the
						TCK a third-party EventStorage runs and the fixture application authors
						test against, so it has to be resolvable like any other client artifact.
					-->
					<!-- matched against each artifact's artifactId (exact) -->
					<excludeArtifacts>
						<excludeArtifact>sliceworkz-eventstore</excludeArtifact>
						<excludeArtifact>sliceworkz-eventstore-parent-pom</excludeArtifact>
						<excludeArtifact>sliceworkz-eventstore-examples</excludeArtifact>
						<excludeArtifact>sliceworkz-eventstore-tests</excludeArtifact>
						<excludeArtifact>sliceworkz-eventstore-benchmark</excludeArtifact>
					</excludeArtifacts>
			    </configuration>
			</plugin>

			<!--
				Produce a flattened, self-contained consumer POM for the published
				(client-facing) modules: no parent reference and dependency versions
				inlined, so consumers do not need the parent-pom / aggregator POMs.
				This mirrors what the Maven 4.1.0 model gives natively on the
				maven-4 branch. flattenMode 'ossrh' keeps the metadata Maven Central
				requires (name, description, url, licenses, scm, developers); the BOM
				module overrides flattenMode to 'bom' to preserve dependencyManagement.

				NOTE: this relies on building with Maven 3. Maven 4 generates its own
				consumer POM from the in-memory model (which still carries the parent
				on this 4.0.0-model project) and relegates the flattened POM to a
				secondary -build.pom, defeating the purpose. develop builds with Maven 3.
			-->
			<plugin>
			    <groupId>org.codehaus.mojo</groupId>
			    <artifactId>flatten-maven-plugin</artifactId>
			    <version>${maven.flatten-plugin.version}</version>
			    <configuration>
					<flattenMode>ossrh</flattenMode>
			    </configuration>
			    <executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
			    </executions>
			</plugin>

			<plugin>
			    <groupId>com.mycila</groupId>
			    <artifactId>license-maven-plugin</artifactId>
			    <version>${maven.mycila-license-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			    <configuration>
					<properties>
						<project.name>Sliceworkz Eventstore</project.name>
						<project.description>a Java/Postgres DCB Eventstore implementation</project.description>
					    <owner>Sliceworkz / XTi</owner>
					    <email>info@sliceworkz.org</email>
					    <year>2025-2026</year>
					</properties>
					<licenseSets>
						<licenseSet>
							<header>com/mycila/maven/plugin/license/templates/LGPL-3.txt</header>
							<includes>
							    <include>**/*.java</include>
							    <include>**/*.sql</include>
							    <include>**/*.xml</include>
							    <include>**/*.properties</include>
							</includes>
							<excludes>
							    <exclude>**/target/**</exclude>
							</excludes>
						</licenseSet>
					</licenseSets>
			    </configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>gpg-ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven.maven-pgp-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>install</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
							<passphrase>${env.GPG_PASSPHRASE}</passphrase>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!--
			Deploy SNAPSHOT artifacts to the sliceworkz cloudrepo instead of Maven
			Central. Activated by the build-and-deploy-snapshot-cloudrepo workflow.

			The central-publishing-maven-plugin installs a lifecycle participant that,
			by default, clears the maven-deploy-plugin's executions and takes over the
			deploy phase. That participant stands down as soon as the central plugin has
			an explicit execution binding the 'publish' goal ("Preexisting publish
			related goal bindings found" in its log). We add exactly such an execution
			here (phase 'none', so it never actually runs; skipPublishing as
			belt-and-suspenders). With the participant standing down, the standard
			maven-deploy-plugin stays active and honours the cloudrepo
			distributionManagement below. The default (profile-inactive) build is
			untouched, so releases to Maven Central keep working.
		-->
		<profile>
			<id>cloudrepo</id>
			<distributionManagement>
				<repository>
					<id>cloudrepo</id>
					<url>https://xti.mycloudrepo.io/repositories/sliceworkz</url>
				</repository>
				<snapshotRepository>
					<id>cloudrepo</id>
					<url>https://xti.mycloudrepo.io/repositories/sliceworkz</url>
				</snapshotRepository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<configuration>
							<skipPublishing>true</skipPublishing>
						</configuration>
						<executions>
							<execution>
								<id>cloudrepo-stand-down</id>
								<phase>none</phase>
								<goals>
									<goal>publish</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<licenses>
		<license>
			<name>LGPL License</name>
			<url>https://opensource.org/license/lgpl-3-0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Günther Van Roey</name>
			<email>gunther.vanroey@xt-i.com</email>
		</developer>
	</developers>
	
	<scm>
		<connection>https://github.com/sliceworkz/eventstore.git</connection>
		<developerConnection>scm:git:git://github.com/sliceworkz/eventstore.git</developerConnection>
		<url>https://github.com/sliceworkz/eventstore</url>
	</scm>
	
</project>
